# rust-evals

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  REVIEWER_REPRODUCTION.md  SECURITY.md  THIRD_PARTY_LICENSES.md  clippy.toml  deny.toml  justfile  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-tier1-fast.yml  ci-tier2-medium.yml  release-tag.yml
artifacts/: final_repro_log.md
benchmarks/: README.md
benchmarks/live/manifests/: Aider-AI__aider-3806.json  Azure__azure-sdk-for-python-40487.json  BerriAI__litellm-10284.json  Kozea__Radicale-1766.json  Kozea__WeasyPrint-2437.json  Pyomo__pyomo-3588.json  Textualize__textual-5743.json  ag2ai__faststream-1796.json  ag2ai__faststream-2170.json  aiogram__aiogram-1575.json  aiogram__aiogram-1585.json  aiogram__aiogram-1670.json  aiogram__aiogram-1674.json  amoffat__sh-750.json  ansible__ansible-lint-4566.json  apify__crawlee-python-1155.json  apify__crawlee-python-1181.json  arviz-devs__arviz-2404.json  arviz-devs__arviz-2408.json  aws-cloudformation__cfn-lint-3475.json  aws-cloudformation__cfn-lint-3498.json  aws-cloudformation__cfn-lint-3501.json  aws-cloudformation__cfn-lint-3528.json  aws-cloudformation__cfn-lint-3557.json  aws-cloudformation__cfn-lint-3563.json  aws-cloudformation__cfn-lint-3593.json  aws-cloudformation__cfn-lint-3596.json  aws-cloudformation__cfn-lint-3605.json  aws-cloudformation__cfn-lint-3607.json  aws-cloudformation__cfn-lint-3629.json  aws-cloudformation__cfn-lint-3639.json  aws-cloudformation__cfn-lint-3650.json  aws-cloudformation__cfn-lint-3653.json  aws-cloudformation__cfn-lint-3659.json  aws-cloudformation__cfn-lint-3663.json  aws-cloudformation__cfn-lint-3684.json  aws-cloudformation__cfn-lint-3700.json  aws-cloudformation__cfn-lint-3707.json  aws-cloudformation__cfn-lint-3749.json  aws-cloudformation__cfn-lint-3759.json  (+459 more)
benchmarks/rust/manifests/: BurntSushi__ripgrep_1294.json  BurntSushi__ripgrep_1367.json  BurntSushi__ripgrep_1642.json  BurntSushi__ripgrep_1980.json  BurntSushi__ripgrep_2209.json  BurntSushi__ripgrep_2295.json  BurntSushi__ripgrep_2488.json  BurntSushi__ripgrep_2576.json  BurntSushi__ripgrep_2610.json  BurntSushi__ripgrep_2626.json  BurntSushi__ripgrep_454.json  BurntSushi__ripgrep_723.json  BurntSushi__ripgrep_727.json  BurntSushi__ripgrep_954.json  clap-rs__clap_1624.json  clap-rs__clap_1710.json  clap-rs__clap_1869.json  clap-rs__clap_1958.json  clap-rs__clap_1972.json  clap-rs__clap_1975.json  clap-rs__clap_2008.json  clap-rs__clap_2027.json  clap-rs__clap_2058.json  clap-rs__clap_2075.json  clap-rs__clap_2085.json  clap-rs__clap_2093.json  clap-rs__clap_2135.json  clap-rs__clap_2154.json  clap-rs__clap_2161.json  clap-rs__clap_2166.json  clap-rs__clap_2168.json  clap-rs__clap_2182.json  clap-rs__clap_2190.json  clap-rs__clap_2203.json  clap-rs__clap_2251.json  (+204 more)
ci/scripts/: analyze_strict_feasibility.py  anonymization_scrub_lib.py  audit_verified_manifest_entrypoints.py  build_anonymous_submission_bundle.py  check_claim_limits.py  check_evidence_quality.py  check_l2_arm_separation.py  check_paper_claim_sources.py  check_reviewer_false_success_language.py  diagnose_batch_summary.py  export_l2_flagship_reviews.py  export_l2_selection_manifest.py  export_live_panel_v2_appendix.py  filter_panel_upstream_resolved.py  l2_flagship_gold_patch_validation.py  live_panel_leave_one_out.py  merge_l2_batch_summaries.py  preflight_verified_selectors.py  prewarm_panel_images.py  run_evidence_tier1_checks.py  run_tier3_fixtures.sh  secret_scan_release.py  triage_l1_harness_errors.py  verified_pytest_targets.py  verify_anonymous_bundle_scrub.py  write_final_numbers_md.py  write_release_artifact_manifest.py  write_release_manifest.py
configs/evaluator/: default.toml  live.toml  rust.toml  verified.toml  verified_headline.toml
configs/policy/: default_policy.toml  rust_pilot.toml  rust_proof_subset.toml  swe_bench_verified_headline.toml
configs/proof_subset/: selection_policy.toml
configs/strengthening/: default_rules.toml
datasets/public_links/: live_sources.json  rust_sources.json  verified_sources.json
docs/: README.md  architecture.md  artifact_spec.md  benchmark_support.md  claim_lock_neurips2026.md  cli_reference.md  evaluation_ladder.md  evaluator_card_template.md  evidence_empirical_status.md  evidence_manual.md  evidence_tranche_plan.md  getting_started.md  github_release_tag_ci_confirmation.md  l2_failure_case_studies.md  l2_gold_patch_validation.md  l2_selection_protocol.md  operational_runbook.md  paper_claim_sources.json  paper_claim_sources.yaml  proof_subset_policy.md  proof_subset_sketches.md  public_terminology.md  readme.md  rust_proof_paper_semantics_replay.md  scientific_scope.md  selection_protocol_l2_flagship.md  selection_protocol_live_v2.md  selection_protocol_rust_proof_subset.md  selection_protocol_verified_feasibility.md  submission_checklist.md  troubleshooting.md
paper/: MANUSCRIPT_GUIDE_NEURIPS2026.md  README.md  paper_claim_sources.json  paper_claim_sources.yaml
paper/exports/: CLAIM_SOURCE_MAP.md  reproduction_manifest.json  strict_feasibility_report.json
paper/tables/: artifact_surfaces.tex  l2_failure_families.tex  l2_flagship_arm_breakdown.tex  l2_flagship_summary.tex  l2_gold_patch_family_summary.tex  live_static_vs_live.tex  rust_proof_frontier.tex  verified_feasibility_bound.tex
schemas/: benchmark_task.schema.json  candidate_resolution.schema.json  evaluation_result.schema.json  evidence_bundle.schema.json  proof_obligation.schema.json  run_manifest.schema.json  trace_event.schema.json
tests/fixtures/: sample_benchmark_task.json
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: python_round_trip.rs  schemas_validate.rs
tests/python/: conftest.py  test_canonical.py  test_cli.py  test_evidence_cli_scripts.py  test_swe_bench.py  test_validate.py  test_verified_pytest_targets.py
(+4817 files in other folders)
