# Root pyproject.toml for the Python compatibility layer.
#
# The Python code in this repository exists only to bridge Python-heavy benchmark
# ecosystems (principally SWE-bench tooling). No evaluator core logic lives in Python.
# The authoritative evaluation implementation is the Rust workspace defined in Cargo.toml.

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "eval-ladder-python"
version = "0.1.0"
description = "Python compatibility layer for the eval-ladder Rust evaluation monorepo."
readme = "README.md"
license = { text = "Apache-2.0 OR MIT" }
requires-python = ">=3.10"
authors = [{ name = "eval-ladder contributors" }]
keywords = ["evaluation", "swe-bench", "benchmark", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "typer>=0.12",
    "rich>=13.7",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "PyYAML>=6.0",
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[project.scripts]
eval-ladder-py = "benchmark_compat.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["packages/python/benchmark_compat/src/benchmark_compat"]

[tool.hatch.build.targets.sdist]
include = [
    "packages/python/benchmark_compat/**",
    "README.md",
    "LICENSE",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
files = ["packages/python/benchmark_compat/src", "ci/scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["packages/lean", "packages/rust"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "PL", "RUF",
]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
