[package]
name = "eval-ladder-integration-tests"
description = "Workspace-level integration tests for eval-ladder."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
jsonschema = { workspace = true }

[dev-dependencies]
eval-ladder-core = { workspace = true }
eval-ladder-traces = { workspace = true }
eval-ladder-evidence = { workspace = true }
tempfile = { workspace = true }
